src/components/background-slideshow/background-slideshow.component.scss
.swiper {
  width: 100%;
  height: 100vh;
}

.swiper-slide img {
  display: block;
  width: 100%;
}

.swiper-button-next,
.swiper-button-prev {
  color: var(--mat-sys-on-primary);
}

.background {
  width: 100%;
  height: 100vh;
  background-size: cover;
  background-position: center;
}

.overlay {
  position: absolute;
  top: 65%;
  left: 5%;
  text-align: left;
  color: var(--mat-sys-on-primary);
}

h1 {
  font-size: 2em;
}

